syntax = "proto3";

package main;

message SdkAppCreated {
  int32 brand_id = 1;
  int32 account_id = 2;
  string identifier = 3;
  string authentication = 4;
}
